# TrenchDepositionAutomation

./: .gitignore  LICENSE
generate_trench/: CMakeLists.txt  GenerateTrench copy.cpp  GenerateTrench.cpp  generate_trench.cpp
trench_automation/: main.py  parameters.template  test.ipynb  trench.vtk  util.py  visualize.pvsm  visualize.py
